# CodeSage

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  eslint.config.base.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
apps/rag/: .env.example  AGENTS.md  Dockerfile  PLAN.md  README.md  TODO.md  pyproject.toml
apps/rag/src/api/: __init__.py  main.py  run.py
apps/rag/src/api/routes/: query.py
apps/rag/src/config/: __init__.py  constants.py  errors.py  logging.py  service_users.py  startup.py
apps/rag/src/models/: __init__.py  enums.py  identity.py  indexing.py  indexing_progress.py  operations.py
apps/rag/src/repositories/: __init__.py  graph_queries.py  indexing.py  indexing_progress.py  keyword.py  operations.py  projects.py  session.py  vector.py
apps/rag/src/services/: __init__.py  encryption.py
apps/rag/src/services/embedding/: run_embed.py  tei_client.py
apps/rag/src/services/freshness/: poll_repos.py
apps/rag/src/services/graph/: __init__.py  api_signals.py  extract.py
apps/rag/src/services/health/: __init__.py  model_backends.py
apps/rag/src/services/indexing/: __init__.py  context.py  failure_status.py  job_context.py  progress_messages.py  progress_recorder.py  startup_log.py
apps/rag/src/services/llm/: prompts.py  vllm_client.py
apps/rag/src/services/parsing/: chunker.py  run_parse.py  tree_sitter_parser.py
apps/rag/src/services/qa/: stream_answer.py
apps/rag/src/services/retrieval/: adaptive_top_k.py  fusion.py  (+7 more)
apps/rag/src/workers/: __init__.py  consumer.py  freshness_poller.py  jobs.py  queue.py  worker.py
apps/rag/tests/: conftest.py  test_config.py  test_health.py  test_jobs.py
apps/rag/tests/api/: test_query.py  test_run.py
apps/rag/tests/config/: test_errors.py  test_logging.py  test_service_users.py  test_startup.py
apps/rag/tests/db/: test_enums.py  test_graph_queries.py  test_models.py  test_repositories_identity.py  test_repositories_indexing.py  test_repositories_operations.py  test_repositories_projects.py  test_vector.py
apps/rag/tests/repositories/: test_audit.py
apps/rag/tests/services/: test_adaptive_top_k.py  test_api_signals.py  test_chunker.py  test_context_window.py  test_cross_repo_exit_criteria.py  test_failure_status.py  test_git_ops.py  test_graph_expand.py  test_graph_extract.py  test_link_resolver.py  test_model_backends.py  test_poll_repos.py  test_prompts.py  test_prune.py  test_query_terms.py  test_rerank.py  test_retrieval.py  test_retrieval_fusion.py  test_retrieval_search.py  test_router.py  test_run_embed.py  test_run_parse.py  test_run_sync.py  test_startup_log.py  test_stream_answer.py  test_tei_client.py  test_title.py  test_tokens.py  test_vllm_client.py  test_xrepo_enqueue.py
apps/rag/tests/workers/: test_consumer.py  test_dispatch.py
services/rag/: .env.example  AGENTS.md  Dockerfile  PLAN.md  README.md  TODO.md  pyproject.toml
services/rag/rag/: __init__.py  main.py
services/rag/tests/: test_health.py
services/worker/: .env.example  AGENTS.md  Dockerfile  PLAN.md  README.md  TODO.md  pyproject.toml
services/worker/tests/: test_jobs.py
services/worker/worker/: __init__.py  jobs.py  main.py  queue.py
(+637 files in other folders)
