[project]
name = "codesage-rag"
version = "0.0.0"
description = "CodeSage RAG / QA service (thin FastAPI wiring over py_core)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "codesage-core",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]

[tool.uv.sources]
codesage-core = { path = "../../packages/py-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.pytest.ini_options]
addopts = "--cov=rag --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
