[project]
name = "codesage-worker"
version = "0.0.0"
description = "CodeSage workers (thin Procrastinate queue consumers over py_core)."
requires-python = ">=3.12"
dependencies = [
    "procrastinate>=2.0",
    "psycopg[binary]>=3.2",
    "codesage-core",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[tool.uv.sources]
codesage-core = { path = "../../packages/py-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
addopts = "--cov=worker --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
# queue.py (Procrastinate App) and main.py (process entrypoint) need a live DB / runtime;
# they are integration-tested later (Phase 3), not unit-covered here.
omit = ["tests/*", "worker/queue.py", "worker/main.py"]
